[gd_scene load_steps=2 format=2]

[ext_resource path="res://scene/textedit/TextEdit12.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]

[node name="TextEdit" type="TextEdit" parent="."]
margin_right = 268.0
margin_bottom = 133.0
text = "TextEdit, here you can use newline
So your text can go down down
down
down
down
down
endless"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit11" type="TextEdit" parent="."]
margin_left = 268.0
margin_top = 341.0
margin_right = 536.0
margin_bottom = 444.0
text = "Highlight all ocurrences of the same
text


text text text"
highlight_all_occurrences = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit10" type="TextEdit" parent="."]
margin_top = 311.0
margin_right = 268.0
margin_bottom = 444.0
text = "func folding_is_available():
	print(\"no\")
	print(\"idea\")
	print(\"how\")
	print(\"to\")
	print(\"fold\")"
fold_gutter = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit9" type="TextEdit" parent="."]
margin_left = 268.0
margin_top = 519.0
margin_right = 536.0
margin_bottom = 596.0
text = "Click
at
left
of
this text to see the breakpoint"
breakpoint_gutter = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit8" type="TextEdit" parent="."]
margin_left = 268.0
margin_top = 208.0
margin_right = 536.0
margin_bottom = 341.0
text = "Spaces
  will
    be
        draw"
draw_spaces = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit7" type="TextEdit" parent="."]
margin_top = 208.0
margin_right = 268.0
margin_bottom = 311.0
text = "Tabs
	will
			be
				draw"
draw_tabs = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit6" type="TextEdit" parent="."]
margin_left = 268.0
margin_top = 444.0
margin_right = 536.0
margin_bottom = 519.0
text = "Show
Line
Number"
show_line_numbers = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit5" type="TextEdit" parent="."]
margin_top = 444.0
margin_right = 268.0
margin_bottom = 596.0
custom_colors/member_variable_color = Color( 1, 0, 0, 1 )
custom_colors/code_folding_color = Color( 1, 0.376471, 0, 1 )
custom_colors/function_color = Color( 1, 0.796078, 0, 1 )
custom_colors/safe_line_number_color = Color( 0.592157, 1, 0, 1 )
custom_colors/symbol_color = Color( 0, 1, 0.109804, 1 )
custom_colors/caret_background_color = Color( 0, 1, 0.741176, 1 )
custom_colors/bookmark_color = Color( 0, 0.980392, 1, 1 )
custom_colors/selection_color = Color( 0, 0.415686, 1, 1 )
custom_colors/caret_color = Color( 0.239216, 0, 1, 1 )
custom_colors/breakpoint_color = Color( 0.733333, 0, 1, 1 )
custom_colors/font_color_selected = Color( 1, 0, 0.870588, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "# highlight syntax from code

func do_something(x, y):
	w = y + 10
	z = x.value + 20
	"
syntax_highlighting = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit4" type="TextEdit" parent="."]
margin_left = 268.0
margin_top = 75.0
margin_right = 536.0
margin_bottom = 208.0
text = "Highlight
current
line"
highlight_current_line = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit3" type="TextEdit" parent="."]
margin_top = 133.0
margin_right = 268.0
margin_bottom = 208.0
text = "Readonly

Can't touch me"
readonly = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit2" type="TextEdit" parent="."]
margin_left = 268.0
margin_right = 536.0
margin_bottom = 75.0
text = "Scroll bars will appear if needed




really"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit12" type="TextEdit" parent="."]
margin_left = 536.0
margin_top = -1.0
margin_right = 1018.0
margin_bottom = 596.0
text = "extends TextEdit


func _ready():
	pass


func _on_TextEdit12_symbol_lookup(symbol, row, column):
	print(\"---symbol_lookup---\")
	print(\"symbol\", symbol)
	print(\"row\", row)
	print(\"column\", column)


func _on_TextEdit12_request_completion():
	print(\"---request_completion---\")


func _on_TextEdit12_text_changed():
	print(\"---text_changed---\")


func _on_TextEdit12_info_clicked(row, info):
	print(\"---info_clicked---\")
	print(\"info\", info)
	print(\"row\", row)
"
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
breakpoint_gutter = true
fold_gutter = true
highlight_all_occurrences = true
minimap_draw = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="breakpoint_toggled" from="TextEdit12" to="TextEdit12" method="_on_TextEdit12_breakpoint_toggled"]
[connection signal="cursor_changed" from="TextEdit12" to="TextEdit12" method="_on_TextEdit12_cursor_changed"]
[connection signal="info_clicked" from="TextEdit12" to="TextEdit12" method="_on_TextEdit12_info_clicked"]
[connection signal="request_completion" from="TextEdit12" to="TextEdit12" method="_on_TextEdit12_request_completion"]
[connection signal="symbol_lookup" from="TextEdit12" to="TextEdit12" method="_on_TextEdit12_symbol_lookup"]
[connection signal="text_changed" from="TextEdit12" to="TextEdit12" method="_on_TextEdit12_text_changed"]
